--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,14 +64,24 @@ textarea {
 
   #hero-content {
     position: relative;
-    // top: 82px;
-  }
 
-  #hero-text {
-    @media (max-width: 768px) {
-      font-size: 2em;
+    h1 {
+      @media (max-width: 299px) {
+        font-size: 2.2rem;
+      }
+      @media (min-width: 300px) and (max-width: 399px) {
+        font-size: 2.5rem;
+      }
+      @media (min-width: 400px) and (max-width: 499px) {
+        font-size: 3.2rem;
+      }
+      @media (min-width: 500px) {
+        font-size: 4rem;
+      }
     }
   }
+
+
 
   .hero-footer {
     padding-bottom: 1em;
@@ -85,6 +95,7 @@ a#call-down {
 #project-slider {
   color: #fff;
   background-size: cover;
+  background-attachment: fixed;
 
   .slide {
     display: none;
@@ -114,5 +125,22 @@ a#call-down {
   width: 100%;
   border-radius: 50%;
   max-width: 200px;
-  // border: 2px solid black;
+}
+
+footer {
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%), rgb(0,150,128);
+  height: 15vh;
+  font-size: 2.5em;
+
+  a {
+    color: #ddd;
+  }
+
+  a:hover {
+    color: #fff;
+  }
+}
+
+footer > .row {
+  height: 100%;
 }
